[package]
name = "async_depot_downloader"
version = "0.1.0"
edition = "2024"
authors = ["ArkDra", "arkdra@qq.com"]
license = "MIT OR Apache-2.0"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
clap = { version = "4.5.40", features = ["derive"] }
data-encoding = "2.9.0"
ecb = "0.1.2"
futures = "0.3.31"
indicatif = { version = "0.17.11" }
liblzma = "0.4.1"
native-tls = "0.2.14"
num_cpus = "1.17.0"
protobuf = "3.7.2"
reqwest = { version = "0.12.19", default-features = false, features = [
    "native-tls",
] }
serde_json = "1.0.140"
sha1_smol = "1.0.1"
tokio = { version = "1.45.1", features = ["full"] }

[profile.release]
lto = true
debug = false
